--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "require":{
     "php": "^7.4 || ^8.0",
     "contao/core-bundle": "~4.13",
+    "patchwork/utf8": "^1.3",
     "symfony/http-client": "~5.4",
     "contao-community-alliance/composer-plugin":"~3.2"
   },
